[gd_scene load_steps=8 format=3 uid="uid://c5ocjw6joaemy"]

[ext_resource type="StyleBox" uid="uid://dyequs13mhyp3" path="res://tools/inventory/styles/content_slot_stylebox.tres" id="1_f67vh"]
[ext_resource type="StyleBox" uid="uid://b3yojughln6fb" path="res://tools/inventory/styles/content_slot_stylebox_disabled.tres" id="1_pdw3o"]
[ext_resource type="Script" uid="uid://c8weu3p2f5ayn" path="res://tools/inventory/scripts/visual/base/content_slot_ui.gd" id="2_rfq8a"]
[ext_resource type="Texture2D" uid="uid://elqf4klw68pq" path="res://sprites/synty/borders/SPR_DarkFantasy_Frame_Box_Medium_05_Variant_01.png" id="3_nc0ld"]
[ext_resource type="Texture2D" uid="uid://c7hxe1bn3vvdm" path="res://themes/gradients/blue_to_black.tres" id="5_nc0ld"]

[sub_resource type="Theme" id="Theme_ceefl"]
Button/styles/disabled = ExtResource("1_pdw3o")
Button/styles/focus = ExtResource("1_f67vh")
Button/styles/hover = ExtResource("1_f67vh")
Button/styles/normal = ExtResource("1_f67vh")
Button/styles/pressed = ExtResource("1_f67vh")

[sub_resource type="LabelSettings" id="LabelSettings_aoki5"]
font_size = 25

[node name="item" type="TextureButton"]
custom_minimum_size = Vector2(100, 100)
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -324.0
offset_right = 100.0
offset_bottom = -224.0
grow_vertical = 2
size_flags_horizontal = 4
focus_mode = 0
theme = SubResource("Theme_ceefl")
theme_type_variation = &"FlatButton"
toggle_mode = true
texture_normal = ExtResource("3_nc0ld")
ignore_texture_size = true
stretch_mode = 4
script = ExtResource("2_rfq8a")
background_gradient = ExtResource("5_nc0ld")
show_amount = false

[node name="margin_container" type="MarginContainer" parent="."]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="item_sprite" type="TextureRect" parent="margin_container"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="margin_container"]
layout_mode = 2
texture = ExtResource("5_nc0ld")
expand_mode = 3

[node name="rescaler" type="MarginContainer" parent="margin_container/TextureRect"]
layout_mode = 0
offset_right = 84.0
offset_bottom = 84.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="item_bg_icon" type="TextureRect" parent="margin_container/TextureRect/rescaler"]
layout_mode = 2
expand_mode = 1

[node name="count" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -14.0
offset_bottom = 35.0
grow_horizontal = 0
size_flags_horizontal = 8
size_flags_vertical = 8
text = "0"
label_settings = SubResource("LabelSettings_aoki5")
horizontal_alignment = 2
vertical_alignment = 2
